main/default/objects/Legacy_Contract__c/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <label>ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>