main/default/objects/Legacy_Contract__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>LEC Contract Profile ID</description>
    <label>Contract #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>