main/default/objects/Legacy_Contract__c/fields/Doc_Type_s__c.field-meta.xml
<CustomField>
    <fullName>Doc_Type_s__c</fullName>
    <label>Doc Type(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>