main/default/objects/Legacy_Contract__c/fields/Legacy_Biller_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Biller_Name__c</fullName>
    <label>Legacy Biller Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>