main/default/objects/Legacy_Contract__c/fields/Product_s__c.field-meta.xml
<CustomField>
    <fullName>Product_s__c</fullName>
    <label>Product(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>Business IP - Domestic MPLS</fullName>
            </value>
            <value>
                <fullName>Business IP - Domestic MPLS with Wireless High Availability</fullName>
            </value>
            <value>
                <fullName>Business IP - Global MPLS</fullName>
            </value>
            <value>
                <fullName>Business IP - Integrated Security</fullName>
            </value>
            <value>
                <fullName>Business Line</fullName>
            </value>
            <value>
                <fullName>Business Trunk</fullName>
            </value>
            <value>
                <fullName>Call Accounting</fullName>
            </value>
            <value>
                <fullName>Call Sequencing</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Centrex</fullName>
            </value>
            <value>
                <fullName>CISCO</fullName>
            </value>
            <value>
                <fullName>Cloud Compute - Infrastructure as a Service (IaaS)</fullName>
            </value>
            <value>
                <fullName>Colocation</fullName>
            </value>
            <value>
                <fullName>Conferencing</fullName>
            </value>
            <value>
                <fullName>DDoS Protection</fullName>
            </value>
            <value>
                <fullName>Dedicated DSL</fullName>
            </value>
            <value>
                <fullName>Digital Trunk</fullName>
            </value>
            <value>
                <fullName>E1000 Internet Burstable</fullName>
            </value>
            <value>
                <fullName>E1000 Internet Fixed</fullName>
            </value>
            <value>
                <fullName>E100 Internet Burstable</fullName>
            </value>
            <value>
                <fullName>E100 Internet Fixed</fullName>
            </value>
            <value>
                <fullName>E10 Internet Fixed</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Ethernet Internet with Wireless High Availability</fullName>
            </value>
            <value>
                <fullName>Frame Relay</fullName>
            </value>
            <value>
                <fullName>GMPLS-MNS US</fullName>
            </value>
            <value>
                <fullName>High Availability T1 DNS</fullName>
            </value>
            <value>
                <fullName>High Speed Internet - ADSL</fullName>
            </value>
            <value>
                <fullName>High Speed Internet - Internet 15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>