main/default/objects/Legacy_Contract__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Renewed</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Customer Renewed</fullName>
            </value>
            <value>
                <fullName>Early Renewal</fullName>
            </value>
            <value>
                <fullName>Incremental</fullName>
            </value>
            <value>
                <fullName>Initial Term</fullName>
            </value>
            <value>
                <fullName>Month to Month</fullName>
            </value>
            <value>
                <fullName>Replaced Within Initial Term</fullName>
            </value>
            <value>
                <fullName>Replaced Within Renewal Term</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Within Renewal Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>