main/default/objects/Legacy_Contract__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>COB</fullName>
            </value>
            <value>
                <fullName>LOA</fullName>
            </value>
            <value>
                <fullName>Month to Month</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>Paddie - need update</fullName>
                <isActive>false</isActive>
                <label>Paddie - need update</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>