main/default/objects/Legacy_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Legacy_ID__c</columns>
    <columns>Contract__c</columns>
    <columns>Accept_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Sign_Date__c</columns>
    <columns>TCV__c</columns>
    <columns>ACV__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>